--- a/src/app/modals/about-modal/about-modal.component.html
+++ b/src/app/modals/about-modal/about-modal.component.html
@@ -51,14 +51,14 @@
         <div class="overlay-content" *ngIf="currentPage === 'details'">
             <div class="stacked-buttons">
                 <button mat-button class="about-item"
-                    (click)="openLink('https://gitlab.com/Hakanbaban53/rclone-manager')"
+                    (click)="openLink('https://github.com/Hakanbaban53/rclone-manager')"
                     style="border-radius: 16px 16px 0px 0px !important;">
                     <span>Website</span>
                     <mat-icon svgIcon="open-link"></mat-icon>
                 </button>
                 <mat-divider></mat-divider>
                 <button mat-button class="about-item"
-                    (click)="openLink('https://gitlab.com/Hakanbaban53/rclone-manager/-/issues')"
+                    (click)="openLink('https://github.com/Hakanbaban53/rclone-manager/issues')"
                     style="border-radius: 0px 0px 16px 16px !important;">
                     <span>Report Issues</span> <mat-icon svgIcon="open-link"></mat-icon>
                 </button>
