--- a/src/app/modals/about-modal/about-modal.component.scss
+++ b/src/app/modals/about-modal/about-modal.component.scss
@@ -138,8 +138,8 @@
       padding-block-start: 16px;
 
       a {
-        color: var(--blue);
-        text-decoration: none;
+        color: var(--accent-color);
+        text-decoration: underline;
         font-weight: 500;
         cursor: pointer;
       }
