--- a/src/app/modals/remote-config-modal/remote-config-modal.component.scss
+++ b/src/app/modals/remote-config-modal/remote-config-modal.component.scss
@@ -49,6 +49,7 @@
         margin-bottom: 12px;
         padding: 8px 12px;
         gap: 6px;
+        overflow: clip;
 
         &.advanced-field {
           border-left: 4px solid var(--purple);
